tests/fixtures/invalid/pow_bool_set_int.py
# Cannot call pow() with Bool, Set[int], Int
x = pow(True, {1, 2, 3}, 1)
